--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>Document</title>
 </head>
 <body>
-	abc
+	<script>
+		window.location.href = 'zaikokanri.free.nf/scan_barcode_qr/scanHome/admin';
+	</script>
 </body>
 </html>
